@@ -1,7 +1,8 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
-    xmlns:five="http://namespaces.zope.org/five">
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:plone="http://namespaces.plone.org/plone">
 
     <!-- <browser:viewlet -->
     <!--     name="minaraad.global_sections" -->
@@ -9,6 +10,19 @@
     <!--     class=".viewlets.MinaGlobalSectionsViewlet" -->
     <!--     permission="zope2.View" -->
     <!--     /> -->
+
+  <include package="plone.app.portlets" />
+  <plone:portlet
+      name="Products.minaraad.Recent"
+      interface=".recentPortlet.IRecentPortlet"
+      assignment=".recentPortlet.Assignment"
+      renderer=".recentPortlet.Renderer"
+      addview=".recentPortlet.AddForm"
+      editview=".recentPortlet.EditForm"
+      view_permission="zope2.View"
+      edit_permission="plone.app.portlets.ManagePortlets"
+      />
+
 
   <browser:page
       for="Products.minaraad.content.Hearing.IHearing"
